Remove GetDTO and add role validation in attach/detach user
